--- a/app/.env.dist
+++ b/app/.env.dist
@@ -2,5 +2,4 @@ MQTT_BROKER=mqtt
 MQTT_PORT=1883
 MQTT_USER=guest
 MQTT_PASSWORD=guest
-REDIS_HOST=redis
-REDIS_PORT=6379
+SCANNER_CONFIG_PATH=/app/config/scanner.json
