--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -18,6 +18,17 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    location /api/ws {
+        proxy_pass http://fastapi/ws;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /api/ {
       proxy_pass http://fastapi/;
       rewrite ^/api(/.*)$ $1 break;
@@ -27,15 +38,5 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api/ws/ {
-      proxy_pass http://fastapi/;
-      rewrite ^/api(/.*)$ $1 break;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "Upgrade";
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
   }
 }
