--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
   include mime.types;
 
   upstream fastapi {
-    server fpv-fastapi:8000;
+    server raven-eye-fastapi:8000;
   }
 
   server {
