[feature] Minor changes to support ESP32 scanners

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ docker-compose.override.yml
 scanner_emulator/scanner_config.json
 .env
 scanner_emulator/__py_cache__
+scanner_emulator/__pycache__
