[feature] Mongodb added

--- a/app/.env.dist
+++ b/app/.env.dist
@@ -3,3 +3,7 @@ MQTT_PORT=1883
 MQTT_USER=guest
 MQTT_PASSWORD=guest
 SCANNER_CONFIG_PATH=/app/config/scanner.json
+MONGO_USERNAME=mongo
+MONGO_PASSWORD=mongo
+MONGO_URI="mongodb://mongodb:27017"
+DB_NAME="RavenEye"
