--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,17 @@ services:
       - ./volumes/mosquitto/data:/mosquitto/data
       - ./volumes/mosquitto/log:/mosquitto/log
 
+  mongodb:
+    container_name: raven-eye-mongodb
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./volumes/mongodb/data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+
   fastapi:
     container_name: raven-eye-fastapi
     build:
@@ -26,6 +37,7 @@ services:
       - "8000"
     depends_on:
       - mqtt
+      - mongodb
 
   frontend:
     container_name: raven-eye-frontend
