[feature] New design and logic for the esp32 scanners

--- a/.env.dist
+++ b/.env.dist
@@ -2,3 +2,4 @@ MQTT_USER=guest
 MQTT_PASSWORD=guest
 MONGO_INITDB_ROOT_USERNAME=mongo
 MONGO_INITDB_ROOT_PASSWORD=mongo
+MTX_WEBRTCADDITIONALHOSTS=192.168.1.100
