--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -18,6 +18,11 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    location /stream/ {
+        proxy_pass http://raven-eye-mediamtx:8889/;
+        proxy_redirect / /stream/;
+    }
+
     location /api/ws {
         proxy_pass http://fastapi/ws;
         proxy_http_version 1.1;
@@ -38,5 +43,8 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+      location / {
+        try_files $uri /index.html;
+      }
   }
 }
