--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ scanner_emulator/scanner_config.json
 .env
 scanner_emulator/__py_cache__
 scanner_emulator/__pycache__
+docker/mediamtx/mediamtx.yml.dist
