[feature] Store scanners in the mongodb, added logs

--- a/app/.env.dist
+++ b/app/.env.dist
@@ -2,8 +2,5 @@ MQTT_BROKER=mqtt
 MQTT_PORT=1883
 MQTT_USER=guest
 MQTT_PASSWORD=guest
-SCANNER_CONFIG_PATH=/app/config/scanner.json
-MONGO_USERNAME=mongo
-MONGO_PASSWORD=mongo
-MONGO_URI="mongodb://mongodb:27017"
-DB_NAME="RavenEye"
+MONGODB_URI="mongodb://mongo:mongo@mongodb:27017"
+MONGODB_NAME="RavenEye"
